# Arm

./: .gitignore  Final_Project_Presentation.md  Final_Project_Report.md  README.md  build.gradle.kts  download_models.bat  logcat_app.txt  logcat_crash.txt  logcat_fresh.txt  logcat_output.txt  logcat_startup.txt  settings.gradle.kts  setup.bat
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  tts_jni.cpp  whisper_jni.cpp
app/src/main/java/com/arm/translator/: AudioCaptureManager.kt  AudioPlaybackManager.kt  MainActivity.kt  PipelineOrchestrator.kt  SttEngine.kt  TranslationEngine.kt  TtsEngine.kt
app/src/main/res/drawable/: bg_circle_button.xml  bg_language_card.xml  bg_mic_button.xml  bg_status_card.xml  bg_text_card.xml  bg_text_card_green.xml  ic_mic.xml  ic_mic_active.xml  ic_swap.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: architecture.md  model_choices.md  optimizations.md  performance_report.md
